# jnidemo

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  entry.cpp
app/src/main/cpp/base/: base.h
app/src/main/cpp/file/: m_file.cpp  m_file.h
app/src/main/java/com/example/ndkdemo/: DemoApplication.kt  MainActivity.kt  NativeCaller.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
